--- a/frontend/app/translations/en.json
+++ b/frontend/app/translations/en.json
@@ -47,8 +47,8 @@
   "boilerplate.containers.Tables.DataTable.advanced.title": "Advanced Data Table",
   "boilerplate.containers.Tables.DataTable.advanced.desc": "It uses npm mui-datatables. It's easy to use, you just describe columns and data collection. After that it will magically build features such as filtering, viewing / hiding columns, exporting to CSV downloads, printing, and more. It uses npm mui-datatables. It's easy to use, you just describe columns and data collection. After that it will magically build features such as filtering, viewing / hiding columns, exporting to CSV downloads, printing, and more.",
   "boilerplate.containers.Tables.Playground.title": "Table Playground",
-  "boilerplate.containers.Tables.Edit.title": "Editable Cell",
-  "boilerplate.containers.Tables.Edit.inRow.title": "In-Row Editable Cell",
+  "boilerplate.containers.Tables.Edit.title": "Editable Cell vv",
+  "boilerplate.containers.Tables.Edit.inRow.title": "In-Row Editable Cell vv",
   "boilerplate.containers.Tables.Edit.inRow.desc": "The Editable Table Cell supports editing features including creating, updating and deleting rows. The editing state contains information about rows currently being edited, changes applied to a particular row, and rows that have been deleted and created.",
   "boilerplate.containers.Form.Button.title": "Buttons",
   "boilerplate.containers.Form.Button.standard.title": "Standard Buttons",
